--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,11 +10,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [12, 14, 16]
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+      - uses: msimerson/node-lts-versions@v1.1.1
+
         with:
           node-version: ${{ matrix.node }}
       - run: npm i
