--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,12 +4,18 @@ name: tests
 on: [push, pull_request]
 
 jobs:
+  lts:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - uses: msimerson/node-lts-versions@v1.1.1
+
   test:
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        node: lts.outputs.lts
 
     steps:
       - uses: actions/checkout@v3
