--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,11 @@ on: [push, pull_request]
 
 jobs:
   lts:
-    runs-on: 'ubuntu-latest'
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
     steps:
       - uses: msimerson/node-lts-versions@v1.1.1
 
