--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node: lts.outputs.lts
+        node: ${{ lts.outputs.lts }}
 
     steps:
       - uses: actions/checkout@v3
