--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,13 +18,12 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node: needs.lts.outputs.lts
+        os: [ubuntu-latest]
+        node: [lts/*]
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ needs.lts.outputs.lts }}
-      - run: npm i
-      - run: npm test
+      - run: echo ${{ needs.lts.outputs.lts }}
