--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,9 +13,10 @@ jobs:
     outputs:
       lts: ${{ steps.step1.outputs.lts }}
     steps:
-      - uses: msimerson/node-lts-versions@v1.1.1
-      - run: 'echo hello!'
       - id: step1
+      - uses: msimerson/node-lts-versions@v1.1.1
+      - id: step2
+      - run: 'echo hello!'
 
   test:
     needs: findlts
