--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,9 +14,8 @@ jobs:
       lts: ${{ steps.step1.outputs.lts }}
     steps:
       - id: step1
-      - uses: msimerson/node-lts-versions@v1.1.1
-      - id: step2
-      - run: 'echo hello!'
+        uses: msimerson/node-lts-versions@v1.1.1
+        run: 'echo hello!'
 
   test:
     needs: findlts
